create animation translate

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://kit.fontawesome.com/41b8da89ad.js" crossorigin="anonymous"></script>
         <meta charset="UTF-8">
     </head>
-    <body>
+    <body class="body">
         <header class="header">
             <h1 class="header-title">PokemonGame</h1>
             <div class="header-user">
