changement de limite url, correction de bug

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <p class="user-name">userName</p>
             </div>
         </header>
+        <div class="arenaContainer hidden">
+
+        </div>
         <div class="card-container">
             <template class="template">
                 <div class="card fade-in up">
