création de la page de jeu, affichage de la carte et du perso

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     </head>
     <body class="body">
         <header class="header">
-            <h1 class="header-title">PokemonGame</h1>
+            <h1 class="header-title pokeText">PokemonGame</h1>
             <div class="header-user">
                 <img class="user-icon" src="img/userIcon.svg" alt="userAlt">
                 <p class="user-name">userName</p>
             </div>
         </header>
+        <!-- <div class="menu">
+            <button class="button-header pokeText button-poke" id="pokedex">Pokedex</button>
+            <button class="button-header pokeText button-arena" id="arene">Arène</button>
+        </div> -->
         <div class="arenaContainer hidden">
 
         </div>
