création des colisions

--- a/arena.html
+++ b/arena.html
@@ -24,6 +24,7 @@
         </div>
         
         <script type = "module" src="modules/css.js"></script>
+        <script src="data/collisions.js"></script>
         <script src="modules/tileset.js"></script>
     </body>
 </html>
