--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="card-container">
             <template class="template">
-                <div class="card fade-in up">
+                <div class="card fade-in">
                     <div class="pokemon-img-container">
                         <img class="pokemon-img" src="" alt="pokemonImg">
                         <div class="type pokemon-type1"></div>
